--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   "dependencies": {
     "core-js": "^3.0.1",
     "got": "^9.6.0",
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+    "parseurl": "^1.3.3",
+    "qs": "^6.7.0"
   }
 }
